--- a/.github/workflows/ci-pull-request.yml
+++ b/.github/workflows/ci-pull-request.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch:
 
 env:
+  image-name: ghcr.io/johannesprinz/samples-weatherforecast:${{ github.sha }}
   image-name-unit-tests: unit-tests:latest
 
 jobs:
@@ -26,8 +27,35 @@ jobs:
       - name: Unit tests [run]
         run: docker run --rm -v ${{ github.workspace }}/path/to/artifacts/testresults:/code/test/Samples.WeatherForecast.Api.UnitTest/TestResults ${{ env.image-name-unit-tests }}
 
+      - name: Unit tests [results]  
+        uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: unit-test-results
+          path: ${{ github.workspace }}/path/to/artifacts/testresults/test_results_unit_test.trx
+
+      - name: Unit tests [publish]
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Unit tests
+          path: ${{ github.workspace }}/path/to/artifacts/testresults/test_results_unit_test.trx
+          reporter: dotnet-trx
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Code coverage [codecov]
         uses: codecov/codecov-action@v1.2.1
         with:
           files: ${{ github.workspace }}/path/to/artifacts/testresults/*/coverage.info
           verbose: true
+
+      - name: Build docker image
+        run: docker build . -t ${{ env.image-name }}
+      
+      - name: Scan docker image
+        uses: azure/container-scan@v0
+        with:
+          image-name: ${{ env.image-name }}
+          severity-threshold: MEDIUM
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GH_CR }}
