--- a/.github/workflows/ci-pull-request.yml
+++ b/.github/workflows/ci-pull-request.yml
@@ -1,7 +1,7 @@
-name: Build and Publish
+name: CI Pull Request
 
 on:
-  push:
+  pull_request:
     branches: [ main ]
 
   workflow_dispatch:
@@ -11,18 +11,21 @@ env:
   image-name-unit-tests: unit-tests:latest
 
 jobs:
-  build:
+  ci:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
 
       - name: Unit tests [build]
         run: docker build --target unit-test -t ${{ env.image-name-unit-tests }} .
 
       - name: Unit tests [run]
-        run: docker run --rm --volume ${{ github.workspace }}/path/to/artifacts/testresults:/code/test/Samples.WeatherForecast.Api.UnitTest/TestResults ${{ env.image-name-unit-tests }}
+        run: docker run --rm -v ${{ github.workspace }}/path/to/artifacts/testresults:/code/test/Samples.WeatherForecast.Api.UnitTest/TestResults ${{ env.image-name-unit-tests }}
 
       - name: Unit tests [results]  
         uses: actions/upload-artifact@v2
@@ -56,13 +59,3 @@ jobs:
           severity-threshold: MEDIUM
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GH_CR }}
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GH_CR }}
-
-      - name: Push docker image
-        run: docker push ${{ env.image-name }}
