--- a/.github/workflows/ci-pull-request.yml
+++ b/.github/workflows/ci-pull-request.yml
@@ -49,6 +49,14 @@ jobs:
           files: ${{ github.workspace }}/path/to/artifacts/testresults/*/coverage.info
           verbose: true
 
+      - name: Code coverage [Code Climate]
+        uses: paambaati/codeclimate-action@v2.7.5
+        env: 
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+        with:
+          coverageLocations: ${{ github.workspace }}/path/to/artifacts/testresults/*/coverage.info:lcov
+          prefix: /code/
+
       - name: Build docker image
         run: docker build . -t ${{ env.image-name }}
       
